tp3/service-nodeport-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: service-nodeport-nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30009
